@@ -22,7 +22,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials finds verbose partials' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -39,7 +38,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_style_modifiers finds style modifiers' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -55,7 +53,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_style_modifiers finds style modifiers with parameters present too' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -71,7 +68,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_style_modifiers finds style modifiers with verbose partials' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -87,7 +83,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_style_modifiers finds no style modifiers when only partials present' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -102,7 +97,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_style_modifiers finds no style modifiers when only partials with pattern parameters present' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -117,7 +111,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_parameters finds parameters' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -134,7 +127,6 @@
 			test.done();
 
 		},
-
 		'find_pattern_partials_with_parameters finds parameters when stylemodifiers present too' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -151,7 +143,6 @@
 			test.done();
 
 		},
-
 		'find_pattern_partials_with_parameters finds parameters with verbose partials' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -168,7 +159,6 @@
 			test.done();
 
 		},
-
 		'find_pattern_partials_with_parameters finds no style modifiers when only partials present' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -183,7 +173,6 @@
 
 			test.done();
 		},
-
 		'find_pattern_partials_with_parameters finds no style modifiers when only partials with style modifiers present' : function(test){
 
 			//setup current pattern from what we would have during execution
@@ -198,7 +187,6 @@
 
 			test.done();
 		},
-
 		'process_pattern_recursive recursively includes partials' : function(test){
 
 			//tests inclusion of partial that will be discovered by diveSync later in iteration than parent
@@ -306,6 +294,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
+			pl.partials = {};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -315,8 +304,8 @@
 			groupPattern.template = fs.readFileSync(patterns_dir + '/00-test/04-group.mustache', 'utf8');
 			groupPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(groupPattern);
 
-			pl.patterns.push(atomPattern);
-			pl.patterns.push(groupPattern);
+			pattern_assembler.addPattern(atomPattern, pl);
+			pattern_assembler.addPattern(groupPattern, pl);
 
 			//act
 			pattern_assembler.process_pattern_recursive('test/files/_patterns/00-test/04-group.mustache', pl, {});
@@ -344,6 +333,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
+			pl.partials = {};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -355,8 +345,8 @@
 			groupPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(groupPattern);
 			groupPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(groupPattern);
 
-			pl.patterns.push(atomPattern);
-			pl.patterns.push(groupPattern);
+			pattern_assembler.addPattern(atomPattern, pl);
+			pattern_assembler.addPattern(groupPattern, pl);
 
 			//act
 			pattern_assembler.process_pattern_recursive('test/files/_patterns/00-test/10-multiple-classes-numeric.mustache', pl, {});
@@ -384,6 +374,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
+			pl.partials = {};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -393,8 +384,8 @@
 			mixedPattern.template = fs.readFileSync(patterns_dir + '/00-test/06-mixed.mustache', 'utf8');
 			mixedPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(mixedPattern);
 
-			pl.patterns.push(atomPattern);
-			pl.patterns.push(mixedPattern);
+			pattern_assembler.addPattern(atomPattern, pl);
+			pattern_assembler.addPattern(mixedPattern, pl);
 
 			//act
 			pattern_assembler.process_pattern_recursive('test/files/_patterns/00-test/06-mixed.mustache', pl, {});
@@ -422,6 +413,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
+			pl.partials = {};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -431,8 +423,8 @@
 			bookendPattern.template = fs.readFileSync(patterns_dir + '/00-test/09-bookend.mustache', 'utf8');
 			bookendPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(bookendPattern);
 
-			pl.patterns.push(atomPattern);
-			pl.patterns.push(bookendPattern);
+			pattern_assembler.addPattern(atomPattern, pl);
+			pattern_assembler.addPattern(bookendPattern, pl);
 
 			//act
 			pattern_assembler.process_pattern_recursive('test/files/_patterns/00-test/09-bookend.mustache', pl, {});
@@ -460,19 +452,20 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
+			pl.partials = {};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
 			atomPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(atomPattern);
-      atomPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(atomPattern);
+			atomPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(atomPattern);
 
 			var mixedPattern = new object_factory.oPattern('test/files/_patterns/00-test/07-mixed-params.mustache', '00-test', '07-mixed-params.mustache');
 			mixedPattern.template = fs.readFileSync(patterns_dir + '/00-test/07-mixed-params.mustache', 'utf8');
 			mixedPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(mixedPattern);
-      mixedPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(mixedPattern);
+      		mixedPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(mixedPattern);
 
-			pl.patterns.push(atomPattern);
-			pl.patterns.push(mixedPattern);
+			pattern_assembler.addPattern(atomPattern, pl);
+			pattern_assembler.addPattern(mixedPattern, pl);
 
 			//act
 			pattern_assembler.process_pattern_recursive('test/files/_patterns/00-test/07-mixed-params.mustache', pl, {});
@@ -500,19 +493,20 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
+			pl.partials = {};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
 			atomPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(atomPattern);
-      atomPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(atomPattern);
+      		atomPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(atomPattern);
 
 			var bookendPattern = new object_factory.oPattern('test/files/_patterns/00-test/08-bookend-params.mustache', '00-test', '08-bookend-params.mustache');
 			bookendPattern.template = fs.readFileSync(patterns_dir + '/00-test/08-bookend-params.mustache', 'utf8');
 			bookendPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(bookendPattern);
-      bookendPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(bookendPattern);
+      		bookendPattern.parameteredPartials = pattern_assembler.find_pattern_partials_with_parameters(bookendPattern);
 
-			pl.patterns.push(atomPattern);
-			pl.patterns.push(bookendPattern);
+			pattern_assembler.addPattern(atomPattern, pl);
+			pattern_assembler.addPattern(bookendPattern, pl);
 
 			//act
 			pattern_assembler.process_pattern_recursive('test/files/_patterns/00-test/08-bookend-params.mustache', pl, {});
@@ -719,6 +713,48 @@
 			var result = pattern_assembler.get_pattern_by_key('molecules-primary-nav', patternlab);
 			//assert
 			test.equals(result, patternlab.patterns[1]);
+			test.done();
+		},
+		'addPattern - adds pattern extended template to patternlab partial object' : function(test){
+			//arrange
+			var pattern_assembler = new pa();
+			var patternlab = {};
+			patternlab.patterns = [];
+			patternlab.partials = {};
+			patternlab.data = {link: {}};
+
+			var pattern = new object_factory.oPattern('test/files/_patterns/00-test/01-bar.mustache', '00-test', '01-bar.mustache');
+			pattern.extendedTemplate = 'barExtended';
+			pattern.template = 'bar';
+
+			//act
+			pattern_assembler.addPattern(pattern, patternlab);
+
+			//assert
+			test.equals(patternlab.patterns.length, 1);
+			test.equals(patternlab.partials['test-bar'] != undefined, true);
+			test.equals(patternlab.partials['test-bar'], 'barExtended');
+			test.done();
+		},
+		'addPattern - adds pattern template to patternlab partial object if extendedtemplate does not exist yet' : function(test){
+			//arrange
+			var pattern_assembler = new pa();
+			var patternlab = {};
+			patternlab.patterns = [];
+			patternlab.partials = {};
+			patternlab.data = {link: {}};
+
+			var pattern = new object_factory.oPattern('test/files/_patterns/00-test/01-bar.mustache', '00-test', '01-bar.mustache');
+			pattern.extendedTemplate = undefined;
+			pattern.template = 'bar';
+
+			//act
+			pattern_assembler.addPattern(pattern, patternlab);
+
+			//assert
+			test.equals(patternlab.patterns.length, 1);
+			test.equals(patternlab.partials['test-bar'] != undefined, true);
+			test.equals(patternlab.partials['test-bar'], 'bar');
 			test.done();
 		}
 	};
