@@ -25,6 +25,7 @@
       pl.data.link = {};
       pl.config.debug = false;
       pl.patterns = [];
+      pl.partials = {};
       pl.config.patternStates = {};
 
       var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
@@ -32,19 +33,19 @@
       atomPattern.extendedTemplate = atomPattern.template;
       atomPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(atomPattern);
 
-      pl.patterns.push(atomPattern);
+      pattern_assembler.addPattern(atomPattern, pl);
 
       //act
       var patternCountBefore = pl.patterns.length;
       pseudopattern_hunter.find_pseudopatterns(atomPattern, pl);
 
       //assert
-			test.equals(patternCountBefore + 1, pl.patterns.length);
+      test.equals(patternCountBefore + 1, pl.patterns.length);
       test.equals(pl.patterns[1].key, 'test-styled-atom-alt');
       test.equals(pl.patterns[1].extendedTemplate.replace(/\s\s+/g, ' ').replace(/\n/g, ' ').trim(), '<span class="test_base {{styleModifier}}"> {{message}} </span>');
       test.equals(JSON.stringify(pl.patterns[1].jsonFileData), JSON.stringify({"message": "alternateMessage"}));
 
-			test.done();
-		}
+      test.done();
+    }
   }
 }());
